k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: countrytest
  labels:
    app: countrytest
spec:
  type: ClusterIP
  selector:
    app: countrytest
  ports:
    - port: 8085
      targetPort: 8085
      protocol: TCP
      name: http
